--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,11 @@ VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 # ButterCMS Configuration (for blog section)
 # Get your API token from https://buttercms.com/settings/
 VITE_BUTTER_API_KEY=your-butter-api-token
+
+# Email Service Configuration
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY=your_resend_api_key_here
+
+# OpenAI Configuration
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
