--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@supabase/supabase-js": "^2.57.4",
     "buttercms": "^3.0.3",
     "dotenv": "^17.2.3",
+    "i18next": "^25.7.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
